# analise-editais

./: .gitignore  README.md  analisar_editais.py  baixar_todos_tors.py  baixar_tors.py  extrair_qualificacoes.py  gerar_relatorio_final.py  main.py  pyproject.toml  scrape_editais.py
.github/workflows/: daily.yml
core/: analyzer.py  bridge.py  classifier.py  config.py  llm.py  perfil.py  persistence.py  recommender.py  reporter.py  scraper.py  site_generator.py  tor_values.py
dados/: editais_processados.json  editais_todos.json
dados_brutos/: editais_processados.json  qualificacoes_extraidas.json  response_icnim-api.undp.org.br_v1_publish_list_active.json
docs/: index.html
docs/data/: analise.json  perfis.json
perfis/: ambiental.json  economista.json  engenheiro_dados.json  gestao.json  juridico.json  pesquisador.json  pesquisador_computacao.json  saude.json  ti_dados.json
