[project]
name = "analise-editais"
version = "0.2.0"
description = "Scraping, persistência e análise de editais PNUD Brasil com classificação de perfil"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.1.0",
    "fpdf2>=2.8.7",
    "openai>=1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "playwright>=1.59.0",
    "requests>=2.34.2",
]

[project.scripts]
analise-editais = "main:cli"
